update new file

--- a/app/food category.html
+++ b/app/food category.html
@@ -84,20 +84,26 @@
                       <th scope="row">1</th>
                       <td>Desserts</td>
                       <td>9-11-20</td>
-                      <td>Edit</td>
+                      <td><a href="http://" class="btn ">Edit</a></td>
                    </tr>
                    <tr>
                       <th scope="row">2</th>
-                      <td>Desserts</td>
+                      <td>Juice</td>
                       <td>9-11-20</td>
-                      <td>Edit</td>
+                      <td><a href="#" class="btn ">Edit</a></td>
                     </tr>  
                     <tr>
                       <th scope="row">3</th>
-                      <td>Desserts</td>
+                      <td>Veg</td>
                       <td>9-11-20</td>
-                      <td>Edit</td>
-                    </tr>                
+                      <td><a href="#" class="btn ">Edit</a></td>
+                    </tr>  
+                    <tr>
+                      <th scope="row">4</th>
+                      <td>Non-veg</td>
+                      <td>9-11-20</td>
+                      <td><a href="#" class="btn ">Edit</a></td>
+                      </tr>              
                   </tbody>
                 </table>
               </div>
